Fix cut off scroll bar.

--- a/src/app/components/sidebar/style.scss
+++ b/src/app/components/sidebar/style.scss
@@ -2,9 +2,9 @@
 
     height: 100%;
     min-height: 100%;
-    width: 199px;
-    min-width: 199px;
-    max-width: 199px;
+    width: 194px;
+    min-width: 194px;
+    max-width: 194px;
     border-right: 1px solid #B8B8B9;
     display: flex;
     flex-direction: column;
@@ -19,9 +19,9 @@
         height: 40px;
         min-height: 40px;
         max-height: 40px;
-        width: 199px;
-        min-width: 199px;
-        max-width: 199px;
+        width: 194px;
+        min-width: 194px;
+        max-width: 194px;
         overflow: hidden;
         padding: 4px;
         display: flex;
